[#17232] CMake: Generate build more similar to the make.sh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,33 +22,35 @@ if(NOT EXISTS ${LLVM_LIBS_DIR})
 	execute_process(COMMAND wget --progress=dot:giga http://releases.llvm.org/9.0.0/clang+llvm-9.0.0-x86_64-pc-linux-gnu.tar.xz -O - COMMAND tar x --xz --wildcards --strip-components=2 "clang+llvm-9.0.0-x86_64-pc-linux-gnu/lib/libLLVM*.a" WORKING_DIRECTORY ${LLVM_LIBS_DIR})
 endif()
 
-#g++ main.c -Wl,-Bstatic ${LLVM_LIBS} stub.c -Wl,-Bdynamic -static-libstdc++ -static-libgcc -pthread
-
-add_definitions(-static-libstdc++)
-add_definitions(-static-libgcc)
-#add_definitions(-pthread)
-
 add_executable(main main.cpp stub.cpp)
 
 file(GLOB LLVM_LIBS ${LLVM_LIBS_DIR}/*)
-#list(LENGTH LLVM_LIBS LLVM_LIBS_N)
-#message("${LLVM_LIBS_N}: ${LLVM_LIBS}")
 
-# We have to add BinaryFormat and MC libraries at the end again (circular dependencies)...
-# But it bugs out when it has second time the same library linked as in LLVM_LIBS list!
+# We have to add libLLVMMC.a (must be first of those!), libLLVMBinaryFormat.a and libLLVMSupport.a libraries at the end again, because linking to libraries sorted by name causes undefined dependencies from 3 libraries:
+# 	libLLVMPowerPCDesc.a depends on ...MC.a
+#	...MC.a depends on both ...BinaryFormat.a and ...Support.a
+#
+# But it bugs out when target_link_libraries stumbles upon the library from LLVM_LIBS list (duplicates around 100 libraries while linking)!
 
 ## Both this way...
-#list(APPEND LLVM_LIBS "${LLVM_LIBS_DIR}/libLLVMBinaryFormat.a" "${LLVM_LIBS_DIR}/libLLVMMC.a")
+#list(APPEND LLVM_LIBS "${LLVM_LIBS_DIR}/libLLVMBinaryFormat.a" "${LLVM_LIBS_DIR}/libLLVMMC.a" "${LLVM_LIBS_DIR}/libLLVMSupport.a")
 #target_link_libraries(main PRIVATE ${LLVM_LIBS})
 
 ## ...as well as this way.
 #target_link_libraries(main PRIVATE "${LLVM_LIBS}")
-#target_link_libraries(main PRIVATE "${LLVM_LIBS_DIR}/libLLVMBinaryFormat.a" "${LLVM_LIBS_DIR}/libLLVMMC.a")
+#target_link_libraries(main PRIVATE "${LLVM_LIBS_DIR}/libLLVMBinaryFormat.a" "${LLVM_LIBS_DIR}/libLLVMMC.a" "${LLVM_LIBS_DIR}/libLLVMSupport.a")
 
-## The only working way is to remove those libraries from list and just append at the end – and adding Support library after MC as it also resolves some "undefined references" created by MC
-list(REMOVE_ITEM LLVM_LIBS ${LLVM_LIBS_DIR}/libLLVMMC.a ${LLVM_LIBS_DIR}/libLLVMBinaryFormat.a ${LLVM_LIBS_DIR}/libLLVMSupport.a)
-list(APPEND LLVM_LIBS ${LLVM_LIBS_DIR}/libLLVMMC.a ${LLVM_LIBS_DIR}/libLLVMBinaryFormat.a ${LLVM_LIBS_DIR}/libLLVMSupport.a)
-target_link_libraries(main PRIVATE "${LLVM_LIBS}")
+## The only way that works is to remove those libraries from list and just link those after the others
+set(LLVM_LIBS-LAST ${LLVM_LIBS_DIR}/libLLVMMC.a ${LLVM_LIBS_DIR}/libLLVMBinaryFormat.a ${LLVM_LIBS_DIR}/libLLVMSupport.a)
+list(REMOVE_ITEM LLVM_LIBS ${LLVM_LIBS-LAST})
 
+target_link_libraries(main PRIVATE ${LLVM_LIBS} ${LLVM_LIBS-LAST})
+
+# -pthread has meaning for both preprocessor and linker
+add_definitions(-pthread)
 target_link_libraries(main PRIVATE pthread)
 
+target_link_libraries(main PRIVATE -static-libgcc -static-libstdc++)
+
+# Override default "-rdynamic" linking flag (preventing adding all dynamic symbols from statically linked libraries to a resulting executable)
+set(CMAKE_SHARED_LIBRARY_LINK_CXX_FLAGS "")
