[#17232] CMake: Download without wget and parametrize URL/path by the OS
Both are necessary to support CMake configuration on the macOS.

--- a/.ci.yml
+++ b/.ci.yml
@@ -2,7 +2,7 @@ image: debian:stretch
 
 before_script:
   - apt update
-  - apt install -y cmake wget g++ xz-utils
+  - apt install -y cmake g++ xz-utils
 
 build:
   script:
