--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,26 @@ include (ExternalProject)
 
 project (llvm-disas)
 
-set(LLVM_LIBS_DIR ${CMAKE_SOURCE_DIR}/llvm-libs)
+set(LLVM_LIBS_DIR	${CMAKE_SOURCE_DIR}/llvm-libs)
+set(LLVM_VERSION	9.0.0)
+set(LLVM_XZ_PATH	${CMAKE_SOURCE_DIR}/llvm-${LLVM_VERSION}.tar.xz)
+
+if(NOT CMAKE_HOST_UNIX)  # "Set to true when the host system is UNIX or UNIX like (i.e. APPLE and CYGWIN)."
+	message(FATAL_ERROR "The only supported operating systems are UNIX-like systems!")
+endif()
 
 if(NOT IS_DIRECTORY ${LLVM_LIBS_DIR})
 	file(MAKE_DIRECTORY ${LLVM_LIBS_DIR})
 
-	# TODO CHECK OPERATING SYSTEM TO KNOW WHICH LIBS TO DOWNLOAD
-	# OS X url is http://releases.llvm.org/9.0.0/clang%2bllvm-9.0.0-x86_64-darwin-apple.tar.xz
-	# Win64 url is http://releases.llvm.org/9.0.0/LLVM-9.0.0-win64.exe (but there's also win32.exe)
+	if(CMAKE_HOST_APPLE)
+		set(LLVM_OS     darwin-apple)
+	else()
+		set(LLVM_OS     pc-linux-gnu)
+	endif()
 
-	execute_process(COMMAND wget --progress=dot:giga http://releases.llvm.org/9.0.0/clang+llvm-9.0.0-x86_64-pc-linux-gnu.tar.xz -O - COMMAND tar x --xz --wildcards --strip-components=2 "clang+llvm-9.0.0-x86_64-pc-linux-gnu/lib/libLLVM*.a" WORKING_DIRECTORY ${LLVM_LIBS_DIR})
+	file(DOWNLOAD http://releases.llvm.org/${LLVM_VERSION}/clang+llvm-${LLVM_VERSION}-x86_64-${LLVM_OS}.tar.xz ${LLVM_XZ_PATH} SHOW_PROGRESS)
+
+	execute_process(COMMAND tar xf ${LLVM_XZ_PATH} --xz --wildcards --strip-components=2 "clang+llvm-${LLVM_VERSION}-x86_64-${LLVM_OS}/lib/libLLVM*.a" WORKING_DIRECTORY ${LLVM_LIBS_DIR})
 endif()
 
 add_executable(main main.cpp stub.cpp)
