[#17232] Change 'main' name to 'test-app' and wrap all LLVM functions used by it
It was supposed to be 'test' but CMake warns it shouldn't be used as
a target's name (CMP0037 policy).

--- a/.ci.yml
+++ b/.ci.yml
@@ -7,10 +7,10 @@ before_script:
 build:
   script:
     - cmake .
-    - make
+    - make VERBOSE=1
 
   artifacts:
     paths:
       - libllvm.so
-      - main
+      - test-app
     when: always
