--- a/.ci.yml
+++ b/.ci.yml
@@ -6,11 +6,13 @@ before_script:
 
 build:
   script:
-    - cmake .
+    - mkdir build
+    - cd build
+    - cmake ..
     - make VERBOSE=1
 
   artifacts:
     paths:
-      - libllvm.so
-      - test-app
+      - build/libLLVM.so
+      - build/test-app
     when: always
