[#17232] CMake: Group LLVM libraries for GNU linker instead of using strict order
libLLVM*.a libraries are dependent upon each other. For GNU linker (ld)
strict order of such libraries is very important as it searches every
library only once to look for symbols that were unresolved before.

Such libraries can be however enclosed by --start-group and --end-group
switches so that GNU linker will try to resolve any new symbols that
emerged and remained unresolved after linking such group. It seems to be
much more elegant solution then ordering them.

Apple's Clang linker has such behaviour by default and doesn't know
those switches. It turned out, it doesn't know "--unresolved-symbols"
either and also by default has such behaviour. That's why those were
restricted only to "GNU" linker (which is invoked by the CXX_COMPILER).

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_definitions(-Werror)
 add_definitions(-Wall)
 
 add_library(LLVM SHARED init.c stub.c create_disasm.c disasm_instruction.c dispose.c)
-target_link_libraries(LLVM PRIVATE -Wl,--unresolved-symbols=report-all)
+target_link_libraries(LLVM PRIVATE $<$<CXX_COMPILER_ID:GNU>:-Wl,--unresolved-symbols=report-all>)
 
 # Use "C++ linker" to create LLVM target as LLVM code in linked libraries is written in C++
 set_property(TARGET LLVM PROPERTY LINKER_LANGUAGE "CXX")
@@ -49,22 +49,16 @@ if(CMAKE_HOST_UNIX)  # "Set to true when the host system is UNIX or UNIX like (i
 		message("Using LLVM from ${LLVM_LIBS_DIR} directory")
 	endif()
 
-	# We have to add libLLVMMC.a (must be first of those!), libLLVMBinaryFormat.a and libLLVMSupport.a libraries at the end again, because linking to libraries sorted by name causes undefined dependencies from 3 libraries:
-	# 	libLLVMPowerPCDesc.a depends on ...MC.a
-	#	...MC.a depends on both ...BinaryFormat.a and ...Support.a
-	#
-	# But it bugs out when target_link_libraries stumbles upon the library from LLVM_LIBS list (duplicates around 100 libraries while linking)!
-
-	## The only way that works is to remove those libraries from list and just link those after the others
 	file(GLOB LLVM_LIBS ${LLVM_LIBS_DIR}/*)
-	set(LLVM_LIBS-LAST ${LLVM_LIBS_DIR}/libLLVMMC.a ${LLVM_LIBS_DIR}/libLLVMBinaryFormat.a ${LLVM_LIBS_DIR}/libLLVMSupport.a)
-	list(REMOVE_ITEM LLVM_LIBS ${LLVM_LIBS-LAST})
-
-	# Order of linked libraries is important. Globbed files list is sorted implicitly only since cmake 3.10.
-	list(SORT LLVM_LIBS)
 
 	# PRIVATE to make sure libLLVM contains everything. With the default PUBLIC, LLVM_LIBS are propagated to test-app linkage.
-	target_link_libraries(LLVM PRIVATE ${LLVM_LIBS} ${LLVM_LIBS-LAST})
+	target_link_libraries(LLVM PRIVATE
+		# LLVM libraries have some dependencies between themselves
+		# GNU linker requires grouping such libraries to search them again as long as new symbols emerge and remain unresolved
+		$<$<CXX_COMPILER_ID:GNU>:-Wl,--start-group>
+		${LLVM_LIBS}
+		$<$<CXX_COMPILER_ID:GNU>:-Wl,--end-group>
+	)
 
 	# LLVM libraries use POSIX threads
 	target_link_libraries(LLVM PRIVATE pthread)
